Overflow Fixed

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ background-image: linear-gradient(
 }
 
 .mainWrapper {
+  position: fixed;
   padding-top: 5%;  
   height: 100%;
   width: 100%;
@@ -64,7 +65,7 @@ background-image: linear-gradient(
 .home {
   width: 100%;
   height: 100%;
-  
+ 
 }
 
 .formdiv{
@@ -75,7 +76,7 @@ background-image: linear-gradient(
 }
 
 .form-card {
-    position: relative;
+    
     border-radius: 10px;
     width: 550px;
     height: 99%;
